--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 #+OPTIONS: broken-links:mark
-* Table of Contents                                                     :TOC_5_gh:
+* FXRuby Enhancement Table of Contents                             :TOC_5_gh:
  - [[#fxruby-enhancement][fxruby-enhancement]]
    - [[#introduction][Introduction]]
    - [[#installation][Installation]]
