--- a/README.org
+++ b/README.org
@@ -59,6 +59,17 @@
    [[file:examples][examples]].
    
 ** Installation
+   Requirements: You must have Fox16 installed on your
+   system. Depending on your operating system, the details will
+   vary. And currently on MacOSX you will also need to install
+   X-Windows. Here, we link you to the details provided by FXRuby
+   for your particular environment:
+   | OS      | Details                                                                                  |
+   |---------+------------------------------------------------------------------------------------------|
+   | Linux   | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Linux-Build-Environment          |
+   | Mac OSX | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Mac-OS-X-Development-Environment |
+   | Windows | https://github.com/lylejohnson/fxruby/wiki/Setting-Up-a-Windows-Build-Environment        |
+
    To install the gem from commandline:
 
    #+begin_src bash
