--- a/README.org
+++ b/README.org
@@ -1,5 +1,8 @@
 #+OPTIONS: broken-links:mark
 * FXRuby Enhancement Table of Contents                             :TOC_5_gh:
+
+  #+ATTR_HTML: title="Join the chat at https://gitter.im/fxruby-enhancement/Lobby"
+  [[https://gitter.im/fxruby-enhancement/Lobby?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge][file:https://badges.gitter.im/fxruby-enhancement/Lobby.svg]]
  - [[#fxruby-enhancement][fxruby-enhancement]]
    - [[#introduction][Introduction]]
    - [[#installation][Installation]]
