--- a/README.org
+++ b/README.org
@@ -418,7 +418,7 @@
 
     https://github.com/flajann2/rubyneat-panel/tree/master/lib/rubyneat-panel
 
-    Class-based enhancement (this has not been tested yet!!!):
+    Class-based enhancement (this is currently not supported!!!):
     #+begin_src ruby
     class Main < FXMainWindow
       compose :my_window do
